Bug 443769 - [Regression] breeze 5.23: QDoubleSpinBoxes ignore the alignment and always get aligned in the center
Summary: [Regression] breeze 5.23: QDoubleSpinBoxes ignore the alignment and always ge...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.23.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-15 09:32 UTC by Jim Jones
Modified: 2021-10-15 09:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
showing the buggy alignment (6.54 KB, image/png)
2021-10-15 09:32 UTC, Jim Jones
Details
after reverting the commit (6.15 KB, image/png)
2021-10-15 09:35 UTC, Jim Jones
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Jones 2021-10-15 09:32:12 UTC
Created attachment 142466 [details]
showing the buggy alignment

SUMMARY
After the update to breeze 5.23, QDoubleSpinBoxes ignore the alignment and always get aligned in the center

STEPS TO REPRODUCE
1. create a widget with a QDoubleSpinBox
2. set the alignment to Qt::AlignRight
3. open the widget
4. alignment is still Qt::AlignCenter

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Jim Jones 2021-10-15 09:33:01 UTC
Reverting https://github.com/KDE/breeze/commit/d59275df3bb71c583c896d7dc3a31cac413cbb3b fixes the regression
Comment 2 Jim Jones 2021-10-15 09:35:21 UTC
Created attachment 142467 [details]
after reverting the commit
Comment 3 Noah Davis 2021-10-15 09:47:58 UTC
Git commit 5a521c9d941d9ef89bcec4e7a927f9f253e4641a by Noah Davis.
Committed on 15/10/2021 at 09:47.
Pushed by ndavis into branch 'Plasma/5.23'.

Don't set alignment for spinboxes

I already reverted this change in a previous commit on the 5.23 branch, but somehow this came back. Reverting it again.

M  +0    -2    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/5a521c9d941d9ef89bcec4e7a927f9f253e4641a