Don't set alignment for spinboxes

I already reverted this change in a previous commit on the 5.23 branch, but somehow this came back. Reverting it again.

BUG: 443769

NB: for spinboxes ClassiK is taking from Breeze 5.23 rather than master