kstyle/breezestyle.cpp
@@ -421,8 +421,6 @@ namespace Breeze
         }
         else if ( qobject_cast<QDialog*> (widget) ) {
             widget->setAttribute(Qt::WA_StyledBackground);
-        } else if ( auto btn = qobject_cast<QPushButton*> (widget) ) {
-            btn->setAutoDefault(false);
         } else if (auto pushButton = qobject_cast<QPushButton*>(widget)) {
             QDialog *dialog = nullptr;
             auto p = pushButton->parentWidget();
